get user detail and swagger
